--- a/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
@@ -7,7 +7,7 @@ role: Utvecklare,Affärsledare
 hide: true
 hidefromtoc: true
 translation-type: tm+mt
-source-git-commit: 8207cba7e75c6bff878ef7f11f74b19bb88f1d61
+source-git-commit: ee5ac02ee1705acf9342db169af6189eb0deec02
 workflow-type: tm+mt
 source-wordcount: '627'
 ht-degree: 0%
@@ -20,7 +20,7 @@ ht-degree: 0%
 
 >[!IMPORTANT]
 >
->Viewers 5.16.1 är en&quot;planerad&quot; version som endast är tillgänglig på mellanlagring för tillfället.
+>Viewers 5.16.1 är en *planerad*-version som endast är tillgänglig på Förproduktion för tillfället.
 
 ## Adobe Dynamic Media Viewers {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
