Updating Old File for core commit bcd590eede5e3916de1b3914a9c329e44f8b184c

--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -4,14 +4,14 @@ description: '"Den senaste versionsinformationen som beskriver de nya funktioner
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Utvecklare,Affärsledare
+exl-id: dd998249-1986-491f-b0ab-554ab414f602
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '2336'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Publishing System 6.10 (maj 2015){#scene-publishing-system-release-notes-may}
 
@@ -338,4 +338,3 @@ ZoomView
 * UGC-video har tagits bort i den här versionen på grund av låg användning. Om du konfigurerar ett annat Dynamic Media Classic-konto kan det fungera som en ersättningslösning för UGC-video. Kontakta Adobe tekniska support om du vill ha ett annat konto konfigurerat.
 * Textavstavning används inte i den här versionen på grund av begränsad användning. Avstavningsordlistorna definierar hur ord kan delas upp och avstavas för ett optimalt textflöde.
 * Metadata Server och Likhetssökning togs bort 2015 på grund av låg användning. När det officiella måldatumet för borttagning tillkännages kommer berörda kunder att meddelas av Adobe tekniska support.
-
