Updating Old File for core commit bcd590eede5e3916de1b3914a9c329e44f8b184c

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.5.2
 feature: Dynamic Media Classic,visningsprogram,SDK/API
 role: Utvecklare,Affärsledare
+exl-id: f3efc1d4-1276-423b-bc22-557842cebc90
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '611'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation för Scene7 Viewer 5.5.2{#scene-viewers-release-notes}
 
@@ -84,4 +84,3 @@ ht-degree: 0%
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
 * Affischbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
 * När progressiv uppspelning används kan förhandsvisningsbilden döljas efter att videon har lästs in i Internet Explorer 9.
-
