Updating Old File for core commit bcd590eede5e3916de1b3914a9c329e44f8b184c

--- a/help/s7-release-notes/s7rn66.md
+++ b/help/s7-release-notes/s7rn66.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.6
 feature: Dynamic Media Classic
 role: Utvecklare,Affärsledare
+exl-id: 19c323db-7da8-47ae-a9d9-4ead4b8d739e
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '538'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Publishing System 6.6{#scene-publishing-system-release-notes}
 
@@ -98,4 +98,3 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 <!--   See [About using HTML5 video](http://help.adobe.com/en_US/scene7/using/WS98ca2e6790647c064dcc4e2c1399dadca0f-8000.html). -->
 
 * Förbättrad videokodningstid där en videofil läses och sedan konverteras till flera kodningar.
-
