Updating Old File for core commit bcd590eede5e3916de1b3914a9c329e44f8b184c

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 4.9.2
 feature: Dynamic Media Classic,visningsprogram,SDK/API
 role: Utvecklare,Affärsledare
+exl-id: fb79049d-b135-41c4-ae63-b7b74697b956
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '1115'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Viewer 4.9.2{#scene-viewers-release-notes}
 
@@ -112,4 +112,3 @@ Följande fel har åtgärdats:
    Mer information om hur du konfigurerar en korsdomänprincip finns i följande artikel: [http://kb2.adobe.com/cps/142/tn_14213.html](http://kb2.adobe.com/cps/142/tn_14213.html).
 
 * Ett undantagsfel genererades när visningsprogrammet är inbäddat på HTTPS-sidan. Problemet beror på kommunikation med serverloggning. Mer information: [http://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html](http://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html)
-
