Updating Old File for core commit bcd590eede5e3916de1b3914a9c329e44f8b184c

--- a/help/s7-release-notes/s7rn65.md
+++ b/help/s7-release-notes/s7rn65.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.5
 feature: Dynamic Media Classic
 role: Utvecklare,Affärsledare
+exl-id: 7aac3b5d-541a-49e6-98ae-c22eee8d2702
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '717'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Publishing System 6.5{#scene-publishing-system-release-notes}
 
@@ -124,4 +124,3 @@ Publiceringsprocessen i Scene7 förändras under första och andra kvartalet 201
 * [!DNL Scene7] har nu stöd för  [!DNL Adobe Test&Target] HTML-erbjudanden för personalisering. Sammanställ dynamiskt erbjudandeelement för mycket relevant banderollinnehåll baserat på [!DNL Test&Target] profilskript och kampanjregler.
 
 * Utökad integrering med [!DNL Adobe CQ] erbjuder mappbaserad synkronisering av resurslagringsplatsen och ett enhetligt innehållsgränssnitt. Få åtkomst till, bläddra bland och infoga publicerade dynamiska resurser direkt i ditt [!DNL Scene7]-konto i CQ-sidmallar.
-
