--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.0
 feature: Dynamic Media Classic
 role: Utvecklare,Affärsledare
+exl-id: 3ce75efb-3761-4991-bb4f-beeaab3f2633
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '1083'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Publishing System 6.0{#scene-publishing-system-release-notes}
 
@@ -152,4 +152,3 @@ Följande problem har åtgärdats i Metadata Server:
 
 * Löste ett problem som gjorde att mycket stora EPS-filer inte kunde överföras.
 * &quot;Metadatasökning&quot; med lång resultatlista misslyckas utan att något märks. Detta gör att fel sökresultat visas.
-
