Updating Old File for core commit bcd590eede5e3916de1b3914a9c329e44f8b184c

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation för visningsprogram (5.12.1)
 feature: Dynamic Media Classic,visningsprogram,SDK/API
 role: Utvecklare,Affärsledare
+exl-id: d6db62d2-d780-48d6-bfa0-40fc4abd9a60
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '604'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation för visningsprogram (5.12.1){#viewers-release-notes}
 
@@ -112,4 +112,3 @@ Paketet innehåller följande:
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
 * Affischbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
 * När progressiv uppspelning används kan förhandsvisningsbilden döljas efter att videon har lästs in i Internet Explorer 9.
-
