--- a/help/aem-ips-api/change-log/c-change-log/c-4-0/c-4-0.md
+++ b/help/aem-ips-api/change-log/c-change-log/c-4-0/c-4-0.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Version 4.0
 feature: Dynamic Media Classic,SDK/API
 role: Utvecklare,Administratör
+exl-id: 22b4aa82-da3c-41ba-be3b-baae32cd972d
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '14'
 ht-degree: 0%
 
 ---
-
 
 # Version 4.0{#version}
 
