--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.0.1
 feature: Dynamic Media Classic,visningsprogram,SDK/API
 role: Utvecklare,Affärsledare
+exl-id: 308f5ebf-dd28-4f95-abca-24cc6c212bf4
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '938'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Viewer 5.0.1{#scene-viewers-release-notes}
 
@@ -123,4 +123,3 @@ Följande togs bort:
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
 * Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig på iPad-enheter.
 * Den sista bildrutan i videon kan förvrängas på iPad med iOS 7.
-
