--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.4.2
 feature: Dynamic Media Classic,visningsprogram,SDK/API
 role: Utvecklare,Affärsledare
+exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '829'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation för Scene7 Viewer 5.4.2{#scene-viewers-release-notes}
 
@@ -107,4 +107,3 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
 * Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit eller genomskinlig på iPad-enheter.
 * Den sista bildrutan i en video kan förvrängas på iPad med iOS 7.
-
