Updating Old File for core commit bcd590eede5e3916de1b3914a9c329e44f8b184c

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
@@ -4,14 +4,14 @@ solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.2.2
 feature: Dynamic Media Classic,visningsprogram,SDK/API
 role: Utvecklare,Affärsledare
+exl-id: 6451a838-312a-4ada-a11e-a597ed4eecbc
 translation-type: tm+mt
-source-git-commit: f6c97606d7a4209427316d7367013ad9585a5cae
+source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
 workflow-type: tm+mt
 source-wordcount: '722'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Viewer 5.2.2{#scene-viewers-release-notes}
 
@@ -95,4 +95,3 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
 * Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit eller genomskinlig på iPad-enheter.
 * Den sista bildrutan i videon kan förvrängas på iPad med iOS 7.
-
