--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
@@ -2,18 +2,17 @@
 description: Versionsinformation om Scene7 Viewer 5.2.3
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.2.3
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
+exl-id: 3008cdf7-7bc3-4e68-910d-5dbd1db41f8a
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '870'
+source-wordcount: '867'
 ht-degree: 0%
 
 ---
 
-
-# Versionsinformation för Scene7 Viewer 5.2.3{#scene-viewers-release-notes}
+# Versionsinformation om Scene7 Viewer 5.2.3{#scene-viewers-release-notes}
 
 ## Adobe Scene7 Viewers {#section-0b0363fae0274737bace119f281e740f}
 
@@ -34,11 +33,11 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 Adobe undersöker alternativ för att åtgärda detta problem i Firefox i en framtida version.
 
-## Nya funktioner och förbättringar för 5.2.3 {#section-83c354cfbfce4b9db0b543301a25491f}
+## Nya funktioner och förbättringar i 5.2.3 {#section-83c354cfbfce4b9db0b543301a25491f}
 
 * Visningsprogrammet för utfällbara menyer identifierar felaktigt &quot;äldre&quot; storlekar om s7flyoutzoomview har utfyllnad.
 
-## Nya funktioner och förbättringar för 5.2.2 {#section-405e47e202e54943bd843d82415c91cb}
+## Nya funktioner och förbättringar i 5.2.2 {#section-405e47e202e54943bd843d82415c91cb}
 
 * Stöd för textbunden zoomning har lagts till i visningsprogrammet för blandade media.
 * Stöd för utskrift, hämtning och favoriter har lagts till i eCatalog Viewer.
@@ -110,4 +109,3 @@ Adobe undersöker alternativ för att åtgärda detta problem i Firefox i en fra
 * Svart bildruta kan blinka på skärmen när visningsprogrammet läses in på iPad- eller Android-enheter.
 * Svarta kantlinjer visas på sidan om VideoPlayer-komponenten när bakgrunden är inställd på vit eller genomskinlig på iPad-enheter.
 * Den sista bildrutan i videon kan förvrängas på iPad med iOS 7.
-
