--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
@@ -2,16 +2,15 @@
 description: Versionsinformation för visningsprogram (5.13.1)
 solution: Experience Manager
 title: Versionsinformation för visningsprogram (5.13.1)
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
+exl-id: 266805aa-29a6-4e95-a7b8-43d95beeea36
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '559'
+source-wordcount: '556'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation för visningsprogram (5.13.1){#viewers-release-notes}
 
@@ -47,7 +46,7 @@ Paketet innehåller följande:
    * ZoomVerticalViewer
    * Video360Viewer
 
-## Nya funktioner och förbättringar för 5.13.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## Nya funktioner och förbättringar i 5.13.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * Stöd för integrering med Adobe Launch Dynamic Media Viewers-tillägget har lagts till.
 * Stöd för VR-funktionsläge har lagts till i Oculus Browser för Video360Viewer.
@@ -107,4 +106,3 @@ Paketet innehåller följande:
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
 * Affischbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
 * När progressiv uppspelning används kan förhandsvisningsbilden döljas efter att videon har lästs in i Internet Explorer 9.
-
