--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
@@ -2,13 +2,12 @@
 description: Versionsinformation om Scene7 Viewer 5.0.1
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.0.1
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: 308f5ebf-dd28-4f95-abca-24cc6c212bf4
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '938'
+source-wordcount: '935'
 ht-degree: 0%
 
 ---
