--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
@@ -2,13 +2,12 @@
 description: Versionsinformation om Scene7 Viewer 5.2.2
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.2.2
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: 6451a838-312a-4ada-a11e-a597ed4eecbc
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '722'
+source-wordcount: '719'
 ht-degree: 0%
 
 ---
