Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -2,15 +2,14 @@
 title: Versionsinformation för Dynamic Media
 description: '"Den senaste versionsinformationen för Adobe Dynamic Media Classic, en del av Adobe Experience Manager-lösningen i Adobe Experience Cloud."'
 feature: Dynamic Media Classic
-role: Developer,Business Practitioner
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+role: Developer,User
+exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '1379'
+source-wordcount: '1376'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation för Dynamic Media{#dynamic-media-release-notes}
 
@@ -183,8 +182,7 @@ Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https:
    * Förhandsvisningsbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
    * Filmminiatyrbilden kan döljas när videon har lästs in i Internet Explorer 9 när progressiv uppspelning används.
 
-## Dynamic Media Image Serving 6.3.2 and Image Rendering 6.3.2 {#section-19a3e96f52c74757bcdea0f8a11001f2}
+## Dynamic Media Image Serving 6.3.2 och Image Rendering 6.3.2 {#section-19a3e96f52c74757bcdea0f8a11001f2}
 
 * IC-verktyg - flaggan `downsample2x2` stöds inte längre. Den här flaggan var en 2x2-nedsampling med låg kvalitet som inte längre används av IPS.
 * CORS-huvud - CORS-huvudet är för närvarande konfigurerat för `/is/content/`-begäranden.
-
