Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -3,19 +3,18 @@ description: '"Den senaste versionsinformationen som beskriver de senaste funkti
 solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014)
 feature: Dynamic Media Classic
-role: Developer,Business Practitioner
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+role: Developer,User
+exl-id: 5f120925-d387-4bac-8a4d-f67a198b2b8e
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '1935'
+source-wordcount: '1932'
 ht-degree: 0%
 
 ---
 
-
 # Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014){#scene-publishing-system-release-notes-october}
 
-Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för Adobe Scene7 Publishing System 6.9 som en del av Adobe Experience Manager-lösningen i Adobe Marketing Cloud.
+Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och korrigeringarna för Adobe Scene7 Publishing System 6.9 som ingår i Adobe Experience Manager-lösningen i Adobe Marketing Cloud.
 
 ## Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014) {#topic-1d3011ecca71488abe0d8156a9fc1b97}
 
@@ -30,7 +29,7 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 * [Felkorrigeringar för Scene7 Publishing System 6.9](s7rn69.md#section-86dc0e8eb85241dbb449221becb12888)
 * [Funktioner som inte längre stöds](s7rn69.md#section-b061ad3d170a45ee8e694f997fd5d8ef)
 
-## Scene7 Publishing System 6.9, i korthet {#section-2ed72b7902be4509876d81f25b5632ce}
+## Scene7 Publishing System 6.9 - i korthet {#section-2ed72b7902be4509876d81f25b5632ce}
 
 I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoom viewer, videospelare med mera. Med dessa nya funktioner kan ni utforma och leverera innehållsrika, responsiva, interaktiva upplevelser som ökar konverteringsgraden i alla digitala kanaler.
 
@@ -44,7 +43,7 @@ I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoo
 
    Om du vill ha SSO-konfiguration så att du kan använda den med Scene7 kontaktar du Adobe tekniska support. Ha följande information klar så att dina Marketing Cloud- och Scene7-konton kan länkas samman: ditt Adobe Marketing Cloud-organisationsnamn, ditt Scene7-företagsnamn, och din geografiska region.
 
-## Bilder {#section-98a61ea9a09940639f357f36969d6e55}
+## Bildbehandling {#section-98a61ea9a09940639f357f36969d6e55}
 
 * **Bättre stöd**  för responsiv redigering - Optimera kvaliteten på responsiv bildhantering ytterligare genom att definiera olika förinställningar eller modifieringar för varje brytpunkt. Se [Använda responsivt statiskt bildbibliotek](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/image-serving-api/image-serving-api/responsive-static-image-library/c-about-responsive-static-image-library.html).
 
@@ -63,7 +62,7 @@ I version 6.9 finns ett nytt avancerat visningsprogram för eCatalog, inline zoo
 * Secure Testing for Render Server requests - Secure Testing for core image servassets and video assets is now extended to also include vignettes. Se [Testa resurser innan du publicerar dem](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/upload-publish/testing-assets-making-them-public.html#upload-publish).
 * Övervakning av funktionen för ogiltig CDN-cache - När du har valt en CDN-valideringsmall (se [Allmänna inställningar](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/setup/application-setup.html#general-settings)) och en **[!UICONTROL Invalidate CDN]**-begäran görs på Arkiv-menyn i SPS visas nu en indikator i användargränssnittet som ger dig en uppskattning av hur lång tid det tar att rensa cachen.
 
-## Visare {#section-fc0577722d0b431dae3506c8d4e5366f}
+## Tittare {#section-fc0577722d0b431dae3506c8d4e5366f}
 
 **Nya funktioner, förbättringar och felkorrigeringar för Scene7 HTML5 Viewer SDK 2.8.1**
 
@@ -234,4 +233,3 @@ HTML5 Video Viewer
    Mer information om den här ändringen finns på följande webbplats med vanliga frågor och svar:
 
    [http://dev.day.com/content/docs/en/cq/current/administering/integrating_with_omniture/scene7/dhtml-viewer-endoflifefaqs.html](http://dev.day.com/content/docs/en/cq/current/administering/integrating_with_omniture/scene7/dhtml-viewer-endoflifefaqs.html)
-
