Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -2,18 +2,17 @@
 description: Versionsinformation om Scene7 Viewer 5.4.2
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.4.2
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '829'
+source-wordcount: '826'
 ht-degree: 0%
 
 ---
 
-# Versionsinformation för Scene7 Viewer 5.4.2{#scene-viewers-release-notes}
+# Versionsinformation om Scene7 Viewer 5.4.2{#scene-viewers-release-notes}
 
 ## Adobe Scene7 Viewers {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
@@ -30,7 +29,7 @@ Vi rekommenderar att du testar visningsprogram i vår staging-miljö. Följande 
 
 När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot vår standardtestserver och s7is1-preview-staging.scene7.com.
 
-## Nya funktioner och förbättringar för 5.4.2 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## Nya funktioner och förbättringar i 5.4.2 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * Viewer SDK används i ett namnutrymme.
 * Visningsprogrammets dispose()-API.
