--- a/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
@@ -2,17 +2,16 @@
 title: Versionsinformation för visningsprogram (5.16.1)
 description: Versionsinformation för Dynamic Media Viewer.
 solution: Experience Manager
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 hide: true
 hidefromtoc: true
 robots: noindex
 googlebot: noindex
 exl-id: 636c8c11-9c79-41f3-8101-29fca0fab074
-translation-type: tm+mt
-source-git-commit: 62234233bb1a5bcbd0eac5d281b42ed785c0c169
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '627'
+source-wordcount: '624'
 ht-degree: 0%
 
 ---
@@ -59,7 +58,7 @@ Paketet innehåller följande:
    * genericZoomMobile
    * mixMedia
 
-## Ny förbättring för 5.16.1 {#new-features-and-enhancements-5-15-3}
+## Ny förbättring i 5.16.1 {#new-features-and-enhancements-5-15-3}
 
 * Stöd för DPR-optimering på serversidan har lagts till.
 * Stöd för sanering av URL-konfigurationsparametrar har lagts till. Popup-visningsprogram ignorerar nu URL-konfigurationsparametrar som är definierade i frågesträngen. Den här funktionen utförs om domänen i parameterns värde inte matchar basvisningsdomänen eller inte tillhör en lista över tillåtna domäner.
@@ -87,7 +86,7 @@ Se [Stöd](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/i
 * Bildförinställningar stöds inte.
 * Det går inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
 
-### HTML5 alla visningsprogram {#html5-all-viewers}
+### HTML5 - alla visningsprogram {#html5-all-viewers}
 
 * Om du bäddar in ett visningsprogram i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Adobe rekommenderar att du använder DIV i stället.
 * Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
@@ -101,7 +100,7 @@ Se [Stöd](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/i
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. När du zoomar in på sidan korrigeras layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 
-### HTML5-blandade media {#html5-mixed-media}
+### Blandade HTML5-media {#html5-mixed-media}
 
 * Ljudspårets uppspelning stöds inte.
 
