Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/s7-release-notes/s7rn65.md
+++ b/help/s7-release-notes/s7rn65.md
@@ -3,12 +3,11 @@ description: '"Den senaste versionsinformationen som beskriver de senaste funkti
 solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.5
 feature: Dynamic Media Classic
-role: Developer,Business Practitioner
+role: Developer,User
 exl-id: 7aac3b5d-541a-49e6-98ae-c22eee8d2702
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '717'
+source-wordcount: '714'
 ht-degree: 0%
 
 ---
@@ -17,7 +16,7 @@ ht-degree: 0%
 
 Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.5 i Adobe Marketing Cloud.
 
-## Nya funktioner, förbättringar och korrigeringar {#section-30a6201e50b74fc194c08bd732672ac1}
+## Nya programfunktioner, förbättringar och korrigeringar {#section-30a6201e50b74fc194c08bd732672ac1}
 
 **Viktig information om tillgångspublicering**
 
