--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
@@ -2,13 +2,12 @@
 description: Förbättringar, felkorrigeringar och kända fel i Scene7 Viewer 4.9.2
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 4.9.2
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: fb79049d-b135-41c4-ae63-b7b74697b956
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '1115'
+source-wordcount: '1112'
 ht-degree: 0%
 
 ---
