--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-06-03-20.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-06-03-20.md
@@ -2,16 +2,15 @@
 description: Versionsinformation för visningsprogram (5.13.1)
 solution: Experience Manager
 title: Versionsinformation för visningsprogram (5.13.1)
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
+exl-id: 4d9909a8-c515-4f2d-8a21-ec2968f6e4b8
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '529'
+source-wordcount: '526'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation för visningsprogram (5.14.1){#viewers-release-notes}
 
@@ -49,7 +48,7 @@ Paketet innehåller följande:
    * genericZoomMobile
    * mixMedia
 
-## Nya funktioner och förbättringar för 5.14.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## Nya funktioner och förbättringar i 5.14.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * DimensionalViewer för förhandsgranskning och leverans av 3D.
 * Förbättrad beskärning av smart video i SmartCropVideoViewer när programmet körs i inbäddat läge.
