Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/s7-release-notes/s7rn67.md
+++ b/help/s7-release-notes/s7rn67.md
@@ -3,25 +3,24 @@ description: '"Den senaste versionsinformationen som beskriver de senaste funkti
 solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.7
 feature: Dynamic Media Classic
-role: Developer,Business Practitioner
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+role: Developer,User
+exl-id: 79c7be34-bb31-4581-8919-934fada9410e
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '547'
+source-wordcount: '544'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Publishing System 6.7{#scene-publishing-system-release-notes}
 
 Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.7 i Adobe Marketing Cloud.
 
-## VIKTIGT MEDDELANDE: DHTML-VISNINGSPROGRAM, SLUT PÅ LIVET {#section-58966909d9ec4eacbb6153b83b1642d3}
+## VIKTIGT MEDDELANDE: DHTML-VISNINGSPROGRAM - LIVSLÄNGD {#section-58966909d9ec4eacbb6153b83b1642d3}
 
 ***Från och med den 31 januari 2014 upphörde Adobe Scene7 (nu Dynamic Media Classic) officiellt med stöd för DHTML-visningsprogramplattformen.***
 
-## Nya funktioner, förbättringar och korrigeringar {#section-30a6201e50b74fc194c08bd732672ac1}
+## Nya programfunktioner, förbättringar och korrigeringar {#section-30a6201e50b74fc194c08bd732672ac1}
 
 **Resurshantering och publicering**
 
@@ -122,4 +121,3 @@ Om de flesta av dina metadatasökningar har nytta av att inkludera användardefi
    Det här nya alternativet kombinerar alla fem förinställningar för 16:9 Adaptiv videokodning och alla fem förinställningar för adaptiv videokodning, 4:3, i en enda lista med primära kodningsförinställningar. När du överför videon med det här nya alternativet används automatiskt rätt kodningsförinställningar för att matcha källvideons proportioner. (Den här inställningen ersatte tidigare kodningsförinställningar för adaptiv video.)
 
 <!--   [More information](http://help.stage.adobe.com/en_US/scene7/using/WSE86ACF2B-BD50-4c48-A1D7-9CD4405B62D0.html). -->
-
