--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-19-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-19-14.md
@@ -2,13 +2,12 @@
 description: Versionsinformation om Scene7 Viewer 5.1.1
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.1.1
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: 2f9b1d0a-2c89-41ed-af00-d8f3d636560c
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '749'
+source-wordcount: '746'
 ht-degree: 0%
 
 ---
