Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
@@ -2,13 +2,12 @@
 description: Versionsinformation för visningsprogram (5.12.1)
 solution: Experience Manager
 title: Versionsinformation för visningsprogram (5.12.1)
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: d6db62d2-d780-48d6-bfa0-40fc4abd9a60
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '604'
+source-wordcount: '601'
 ht-degree: 0%
 
 ---
@@ -49,7 +48,7 @@ Paketet innehåller följande:
    * ZoomVerticalViewer
    * Video360Viewer
 
-## Nya funktioner och förbättringar för 5.12.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## Nya funktioner och förbättringar i 5.12.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * Ett nytt visningsprogram med stöd för video 360-innehåll har lagts till.
 
