--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-17.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-17.md
@@ -2,18 +2,17 @@
 description: Versionsinformation om Scene7 Viewer 5.8.2
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.8.2
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: 458e11b1-74f3-4a70-87c8-49cef32acf00
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '634'
+source-wordcount: '631'
 ht-degree: 0%
 
 ---
 
-# Versionsinformation för Scene7 Viewer 5.8.2{#scene-viewers-release-notes}
+# Versionsinformation om Scene7 Viewer 5.8.2{#scene-viewers-release-notes}
 
 ## Adobe Scene7 Viewers {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
@@ -22,7 +21,7 @@ ht-degree: 0%
 * Användaren kunde inte vända en sida med musen om `frametransition=turn`.
 * `ImageMapEffect.mapTips=1` musklicket genererade ett skriptfel på enheter med pekskärm.
 
-## Nya funktioner och förbättringar för 5.8.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## Nya funktioner och förbättringar i 5.8.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * Tangentbordstillgänglighet i grundläggande zoomning, utfällbar bild, blandade media, snurra, zoom, video, karusell, interaktiv bild och interaktiv video.
 * Ikonen för videobuffring har lagts till i Video Viewer, Mixed Media Viewer och Interactive Video Viewer.
