--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-17-18.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-17-18.md
@@ -2,13 +2,12 @@
 description: Versionsinformation för visningsprogram (5.10.1)
 solution: Experience Manager
 title: Versionsinformation för visningsprogram (5.10.1)
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: 4df87531-b27a-4a52-9e35-2e7cda0f9742
-translation-type: tm+mt
-source-git-commit: e7c747c44d27ed1769ab872d962a814d80c0b345
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '510'
+source-wordcount: '507'
 ht-degree: 0%
 
 ---
@@ -17,7 +16,7 @@ ht-degree: 0%
 
 ## Adobe Dynamic Media Viewers {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
-## Nya funktioner och förbättringar för 5.10.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## Nya funktioner och förbättringar i 5.10.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * ARIA-roller och -attribut har lagts till som stöd för hjälpmedelstekniker.
 * Lagt till&quot;förinläsningsmodifierare&quot; för videovisningsprogram för att styra förinläsningen av videoinnehåll.
