--- a/help/aem-viewers-ref/c-release-notes/c-rn-01-13-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-01-13-21.md
@@ -2,16 +2,15 @@
 title: Versionsinformation för visningsprogram (5.15.3)
 description: Versionsinformation för Dynamic Media Viewer.
 solution: Experience Manager
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
+exl-id: 00a1069f-8cfe-41b4-aecd-33c2b6f9bcca
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '629'
+source-wordcount: '626'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation för visningsprogram (5.15.3){#viewers-release-notes}
 
@@ -51,15 +50,15 @@ Paketet innehåller följande:
    * genericZoomMobile
    * mixMedia
 
-## Ny förbättring för 5.15.3 {#new-features-and-enhancements-5-15-3}
+## Ny förbättring i 5.15.3 {#new-features-and-enhancements-5-15-3}
 
 * Ett XSS-problem i äldre HTML5-visningsprogram för mobila enheter har korrigerats genom att SDK-versionen uppdaterades till 3.10. De nya körklara HTML5-visningsprogrammen som används av Dynamic Media påverkades inte av XSS-problemet och de uppdaterades därför inte.
 
-## Ny förbättring för 5.15.2 {#new-features-and-enhancements-5-15-2}
+## Ny förbättring i 5.15.2 {#new-features-and-enhancements-5-15-2}
 
 * Fast stöd för inbyggt videouppspelningsgränssnitt på iOS.
 
-## Nya funktioner och förbättringar för 5.15.1 {#new-features-and-enhancements-5-15-1}
+## Nya funktioner och förbättringar i 5.15.1 {#new-features-and-enhancements-5-15-1}
 
 * Stöd för passiva händelseavlyssnare har lagts till.
 * 3D-återgivningsbiblioteket i DimensionalViewer har uppdaterats för att ge bättre stöd för modellfärgning.
@@ -85,7 +84,7 @@ Paketet innehåller följande:
 * Bildförinställningar stöds inte.
 * Det går inte att lägga till eller ta bort visningsprogrammet från DOM med `display:none` CSS eller genom att dynamiskt koppla loss det från den överordnade noden.
 
-### HTML5 alla visningsprogram {#html5-all-viewers}
+### HTML5 - alla visningsprogram {#html5-all-viewers}
 
 * Om du bäddar in ett visningsprogram i en tabell kan visningsprogrammets storlek eller placering bli felaktig i icke-ursprungligt helskärmsläge. Adobe rekommenderar att du använder DIV i stället.
 * Parametrar med explicita instansnamn i koden kräver att instansnamn i URL:en också skrivs över (till exempel `zoomView.iconfeffect=0`).
@@ -99,7 +98,7 @@ Paketet innehåller följande:
 * Sidlayouten visas ibland felaktigt efter att iOS-enheten har roterats. När du zoomar in på sidan korrigeras layouten.
 * Interna länkar endast till den vänstra sidan i flersidiga uppslag. Påverkar mobila enheter i stående läge.
 
-### HTML5-blandade media {#html5-mixed-media}
+### Blandade HTML5-media {#html5-mixed-media}
 
 * Ljudspårets uppspelning stöds inte.
 
