Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/s7-release-notes/s7rn68.md
+++ b/help/s7-release-notes/s7rn68.md
@@ -3,15 +3,14 @@ description: '"Den senaste versionsinformationen som beskriver de senaste funkti
 solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.8 (maj 2014)
 feature: Dynamic Media Classic
-role: Developer,Business Practitioner
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+role: Developer,User
+exl-id: f930fbf8-2aa4-4e6e-ad8d-4f0a0c76ff0e
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '1938'
+source-wordcount: '1935'
 ht-degree: 0%
 
 ---
-
 
 # Versionsinformation om Scene7 Publishing System 6.8 (maj 2014){#scene-publishing-system-release-notes-may}
 
@@ -39,7 +38,7 @@ Den senaste versionsinformationen som beskriver de senaste funktionerna, förbä
 * Avancerad anpassning av HTML5-visningsprogram - Skapa anpassade visningsprograminteraktioner med den inbäddade webbsidan.
 * Bildförbättring - Möjlighet att beskära bilder till inbäddade banor vid leverans.
 
-## Visare {#section-609885a9c8514a4095da74a0b526138d}
+## Tittare {#section-609885a9c8514a4095da74a0b526138d}
 
 Följande har uppdaterats:
 
@@ -84,7 +83,7 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 [More information](http://help.adobe.com/en_US/scene7/using/WSd4272150f67705c11b002eec12fcba4dee6-8000.html). -->
 
-## Bilder {#section-113f27ea04cd4998a324bba71519c93c}
+## Bildbehandling {#section-113f27ea04cd4998a324bba71519c93c}
 
 * Stöd för progressiv JPEG.
 * Ändrade standardinställningar för oskarp maskning för nya klienter.
@@ -178,7 +177,7 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 * Sociala funktioner som visas i helskärmsläge i HTML5-visningsprogram.
 * Stäng knappen som visas i helskärmsläge i HTML5-visningsprogram.
 
-## Versionsinformation för Dynamic Media Image Serving Viewers 5.0.1 {#section-3fc1a827bcc84c0488229d310086ad8e}
+## Versionsinformation om Dynamic Media Image Serving Viewers 5.0.1 {#section-3fc1a827bcc84c0488229d310086ad8e}
 
 Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html)
 
@@ -254,4 +253,3 @@ Se [https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/li
 * Fast: HTTPS-stöd för HTML5- och AS3-visningsprogram.
 * Stöd för responsiv HTML5-visning har lagts till för att bädda in kod.
 * Bädda in kod för HTML5-visningsprogram skickar konfigurationsparametrar som ett enda JSON-objekt.
-
