--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -3,12 +3,11 @@ description: '"Versionsinformation som beskriver funktioner, förbättringar och
 solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.0
 feature: Dynamic Media Classic
-role: Developer,Business Practitioner
+role: Developer,User
 exl-id: 3ce75efb-3761-4991-bb4f-beeaab3f2633
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '1083'
+source-wordcount: '1080'
 ht-degree: 0%
 
 ---
@@ -146,7 +145,7 @@ Versionsinformation som beskriver funktioner, förbättringar och korrigeringar 
 
 Med det här skrivbordsprogrammet kan du importera befintliga 3D-modeller och redigera dem som 2D-vinjettfiler. De resulterande vinjetteringsfilerna kan överföras till SPS, där färger och texturer kan ersättas vid behov.
 
-## Programrättningar {#section-4219d5dd0a024cd3a95aaac45598363c}
+## Programkorrigeringar {#section-4219d5dd0a024cd3a95aaac45598363c}
 
 Följande problem har åtgärdats i Metadata Server:
 
