--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
@@ -2,18 +2,17 @@
 description: Versionsinformation om Scene7 Viewer 5.5.2
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.5.2
-feature: Dynamic Media Classic,Viewers,SDK/API
-role: Developer,Business Practitioner
+feature: Dynamic Media Classic,visningsprogram,SDK/API
+role: Developer,User
 exl-id: f3efc1d4-1276-423b-bc22-557842cebc90
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '611'
+source-wordcount: '608'
 ht-degree: 0%
 
 ---
 
-# Versionsinformation för Scene7 Viewer 5.5.2{#scene-viewers-release-notes}
+# Versionsinformation om Scene7 Viewer 5.5.2{#scene-viewers-release-notes}
 
 ## Adobe Scene7 Viewers {#section-5460f4e254d44c5a95196e6cb657b7e4}
 
@@ -22,7 +21,7 @@ ht-degree: 0%
 * Det gick inte att spela upp videon i Internet Explorer 11 på Windows 7.
 * `initialframe` påverkade inte stående läge på mobila enheter för eCatalog.
 
-## Nya funktioner och förbättringar för 5.5.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
+## Nya funktioner och förbättringar i 5.5.1 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
 * Stöd för Adobe Marketing Cloud Org ID har lagts till i Adobe Analytics-integreringen.
 * Uppdaterat AppMeasurement JavaScript-bibliotek till version 1.6.1.
