Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/s7-release-notes/s7rn66.md
+++ b/help/s7-release-notes/s7rn66.md
@@ -3,12 +3,11 @@ description: '"Den senaste versionsinformationen som beskriver de senaste funkti
 solution: Experience Manager
 title: Versionsinformation om Scene7 Publishing System 6.6
 feature: Dynamic Media Classic
-role: Developer,Business Practitioner
+role: Developer,User
 exl-id: 19c323db-7da8-47ae-a9d9-4ead4b8d739e
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '538'
+source-wordcount: '535'
 ht-degree: 0%
 
 ---
@@ -17,11 +16,11 @@ ht-degree: 0%
 
 Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.6 i Adobe Marketing Cloud.
 
-## VIKTIGT MEDDELANDE: DHTML-VISNINGSPROGRAM, SLUT PÅ LIVET {#section-58966909d9ec4eacbb6153b83b1642d3}
+## VIKTIGT MEDDELANDE: DHTML-VISNINGSPROGRAM - LIVSLÄNGD {#section-58966909d9ec4eacbb6153b83b1642d3}
 
 ***Från och med den 31 januari 2014 upphörde Scene7 officiellt stödet för DHTML-visningsplattformen.***
 
-## Nya funktioner, förbättringar och korrigeringar {#section-30a6201e50b74fc194c08bd732672ac1}
+## Nya programfunktioner, förbättringar och korrigeringar {#section-30a6201e50b74fc194c08bd732672ac1}
 
 **Resurshantering och publicering**
 
