Updating Old File for core commit 206e4643e3926cb85b4be2189743578f88180be7

--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -3,12 +3,11 @@ title: Versionsinformation om Scene7 Publishing System 6.10 (maj 2015)
 description: '"Den senaste versionsinformationen som beskriver de nya funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.10, en del av Adobe Experience Manager-lösningen i Adobe Marketing Cloud."'
 solution: Experience Manager
 feature: Dynamic Media Classic
-role: Developer,Business Practitioner
+role: Developer,User
 exl-id: dd998249-1986-491f-b0ab-554ab414f602
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
 workflow-type: tm+mt
-source-wordcount: '2336'
+source-wordcount: '2333'
 ht-degree: 0%
 
 ---
@@ -27,7 +26,7 @@ Den senaste versionsinformationen som beskriver de nya funktionerna, förbättri
 * [Felkorrigeringar för Scene7 Publishing System 6.10](s7rn610.md#section-99c1171604ff4ce489285dcab3d929c9)
 * [Funktioner som inte längre stöds](s7rn610.md#section-9295ea9313c84695b19bca0e0f01a690)
 
-## Scene7 Publishing System 6.10 - höjdpunkter {#section-d2c3b12e392446868eba029cbe13c06b}
+## Scene7 Publishing System 6.10 - i korthet {#section-d2c3b12e392446868eba029cbe13c06b}
 
 Med version 6.10 kan ni designa och leverera engagerande, interaktiva upplevelser som ökar konverteringsgraden i alla digitala kanaler.
 
@@ -225,7 +224,7 @@ I **[!UICONTROL Application Setup]** > **[!UICONTROL General Settings]** grupp >
 * Publicering använder inte `assetFile`, så staging-publicering fungerar bara för nya resurser.
 * Null-pekaren utlöses när en regeluppsättning uppdateras.
 
-## Visare {#section-833ab92c91c941d2bfdc27f233f582ad}
+## Tittare {#section-833ab92c91c941d2bfdc27f233f582ad}
 
 **Nya funktioner, förbättringar och felkorrigeringar för Dynamic Media Image Serving Viewer 5.2.2**
 
