--- a/help/aem-ips-api/change-log/c-change-log/c-3-7/c-3-7.md
+++ b/help/aem-ips-api/change-log/c-change-log/c-3-7/c-3-7.md
@@ -3,15 +3,14 @@ description: Version 3.7
 solution: Experience Manager
 title: Version 3.7
 feature: Dynamic Media Classic,SDK/API
-role: Developer,Administrator
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+role: Developer,Admin
+exl-id: dafa720a-8655-4894-a962-e954a62ff011
+source-git-commit: fcda99340a18d5037157723bb3bdca5fa9df3277
 workflow-type: tm+mt
-source-wordcount: '24'
+source-wordcount: '22'
 ht-degree: 0%
 
 ---
-
 
 # Version 3.7{#version}
 
