Updating Old File for core commit fcda99340a18d5037157723bb3bdca5fa9df3277

--- a/help/aem-ips-api/change-log/c-change-log/c-4-5/c-4-5.md
+++ b/help/aem-ips-api/change-log/c-change-log/c-4-5/c-4-5.md
@@ -3,15 +3,14 @@ description: Version 4.5
 solution: Experience Manager
 title: Version 4.5
 feature: Dynamic Media Classic,SDK/API
-role: Developer,Administrator
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+role: Developer,Admin
+exl-id: f7eb7775-0ad8-40cb-8abc-687d77ec8a5b
+source-git-commit: fcda99340a18d5037157723bb3bdca5fa9df3277
 workflow-type: tm+mt
-source-wordcount: '21'
+source-wordcount: '19'
 ht-degree: 0%
 
 ---
-
 
 # Version 4.5{#version}
 
