--- a/help/aem-ips-api/change-log/c-change-log/c-6/c-6.md
+++ b/help/aem-ips-api/change-log/c-change-log/c-6/c-6.md
@@ -3,15 +3,14 @@ description: Version 6.0
 solution: Experience Manager
 title: Version 6.0
 feature: Dynamic Media Classic,SDK/API
-role: Developer,Administrator
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+role: Developer,Admin
+exl-id: 78c95c2e-daf6-428a-9669-3487f0bf5130
+source-git-commit: fcda99340a18d5037157723bb3bdca5fa9df3277
 workflow-type: tm+mt
-source-wordcount: '19'
+source-wordcount: '17'
 ht-degree: 0%
 
 ---
-
 
 # Version 6.0{#version}
 
