--- a/help/aem-ips-api/change-log/c-change-log/c-4-0/c-4-0.md
+++ b/help/aem-ips-api/change-log/c-change-log/c-4-0/c-4-0.md
@@ -3,12 +3,11 @@ description: Version 4.0
 solution: Experience Manager
 title: Version 4.0
 feature: Dynamic Media Classic,SDK/API
-role: Developer,Administrator
+role: Developer,Admin
 exl-id: 22b4aa82-da3c-41ba-be3b-baae32cd972d
-translation-type: tm+mt
-source-git-commit: b4344397f82eb7d2d61020909f4acc7fddea210b
+source-git-commit: fcda99340a18d5037157723bb3bdca5fa9df3277
 workflow-type: tm+mt
-source-wordcount: '14'
+source-wordcount: '12'
 ht-degree: 0%
 
 ---
