Updating Old File for core commit fcda99340a18d5037157723bb3bdca5fa9df3277

--- a/help/aem-ips-api/change-log/c-change-log/c-4-2/c-4-2.md
+++ b/help/aem-ips-api/change-log/c-change-log/c-4-2/c-4-2.md
@@ -3,15 +3,14 @@ description: Version 4.2
 solution: Experience Manager
 title: Version 4.2
 feature: Dynamic Media Classic,SDK/API
-role: Developer,Administrator
-translation-type: tm+mt
-source-git-commit: 469d1a5c43a972116a8a2efb0de5708800130a99
+role: Developer,Admin
+exl-id: 852036d1-8d63-418e-848f-32e17083f88a
+source-git-commit: fcda99340a18d5037157723bb3bdca5fa9df3277
 workflow-type: tm+mt
-source-wordcount: '15'
+source-wordcount: '13'
 ht-degree: 0%
 
 ---
-
 
 # Version 4.2{#version}
 
