Updated by task 'AutomatedMDTask_1630431115699_TM-MT_1630431139345'

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-18-13.md
@@ -2,12 +2,12 @@
 description: Förbättringar, felkorrigeringar och kända fel i Scene7 Viewer 4.9.2
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 4.9.2
-feature: Dynamic Media Classic,visningsprogram,SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: fb79049d-b135-41c4-ae63-b7b74697b956
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
 workflow-type: tm+mt
-source-wordcount: '1112'
+source-wordcount: '1106'
 ht-degree: 0%
 
 ---
@@ -93,7 +93,7 @@ Följande fel har åtgärdats:
 * Serverstöd kan inte läsa in visningsskal om de kompilerats för Flash Player 6. Tillfällig lösning är att kompilera för Flash Player 7.
 * Macintosh OS och Flash Player version 10,0,32,18: Tillfällig lösning är beroende av en JavaScript-brygga i stället för en LocalConnection för kommunikation mellan Flex och Flash. Därför måste Flex-programmet vara inbäddat i HTML-omslutningen.
 * För närvarande har visningsprogrammen för Flash stöd för SWF-filer som endast är kompatibla med Flash 7.
-* På grund av ett problem med Java v.1.5.0_06 stöds inte serverkomponenten med den versionen av Java. [http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990](http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990).
+* På grund av ett problem med Java v.1.5.0_06 stöds inte serverkomponenten med den versionen av Java. [https://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990](https://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6274990).
 * För en skal-URL-parameter måste parametern i skal-URL vara URL-kodad.
 * Bilduppsättningar med utökade ASCII-tecken i namnet måste vara URL-kodade två gånger när de skickas till visningsprogrammet, annars misslyckas FVCTX-begäran eftersom Flash-spelaren avkodar namnet innan den skickas till visningsprogramkoden.
 * Om den inbäddade HTML-sidan har ett viktigt innehåll efter visningsprogrammet, är det möjligt att visningsprogrammet kan anropa en JavaScript-funktion innan sidan är helt inläst. Detta kan medföra att sidinläsningen avbryts. En föreslagen lösning är att använda en onLoad-händelsehanterare för att fördröja initieringen av visningsprogrammet tills sidan har lästs in.
@@ -108,6 +108,6 @@ Följande fel har åtgärdats:
 * Säkerhetsproblem förhindrar att visningsprogrammet läser från en annan server på samma domän, såvida inte båda URL:erna är fullständiga domännamn eller om korsdomänsprincipen är särskilt inställd för att tillåta åtkomst från den servern.
 * Med de nya säkerhetsfunktionerna i Flash 7 får användaren ett meddelande om detta och frågar om du vill tillåta detta, om tittarna försöker läsa från en annan server på den domän där de befinner sig (d.v.s. om de omdirigeras av sökvägarna i `infoServerUrl`, `searchEngineUrl` eller `serverUrl parameters`) om korsdomänsprincipen är inställd på att tillåta åtkomst från den servern.
 
-   Mer information om hur du konfigurerar en korsdomänprincip finns i följande artikel: [http://kb2.adobe.com/cps/142/tn_14213.html](http://kb2.adobe.com/cps/142/tn_14213.html).
+   Mer information om hur du konfigurerar en korsdomänprincip finns i följande artikel: [https://kb2.adobe.com/cps/142/tn_14213.html](https://kb2.adobe.com/cps/142/tn_14213.html).
 
-* Ett undantagsfel genererades när visningsprogrammet är inbäddat på HTTPS-sidan. Problemet beror på kommunikation med serverloggning. Mer information: [http://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html](http://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html)
+* Ett undantagsfel genererades när visningsprogrammet är inbäddat på HTTPS-sidan. Problemet beror på kommunikation med serverloggning. Mer information: [https://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html](https://helpx.adobe.com/flash-player/kb/flash-player-issues-secure-sockets.html)
