--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
@@ -2,12 +2,12 @@
 description: Versionsinformation om Scene7 Viewer 5.0.1
 solution: Experience Manager
 title: Versionsinformation om Scene7 Viewer 5.0.1
-feature: Dynamic Media Classic,visningsprogram,SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 308f5ebf-dd28-4f95-abca-24cc6c212bf4
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
 workflow-type: tm+mt
-source-wordcount: '935'
+source-wordcount: '929'
 ht-degree: 0%
 
 ---
@@ -18,7 +18,7 @@ ht-degree: 0%
 
 Visningsprogramuppgraderingar är bakåtkompatibla och därför behövs inga ändringar i den befintliga webbkoden. Vi rekommenderar dock att du testar de nya visningsprogrammen i vår staging-miljö. Följande webbplats innehåller instruktioner om hur du kan konfigurera systemet för att få åtkomst till vår mellanlagringsserver:
 
-[http://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](http://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
 
 När du har konfigurerat datorn för att få åtkomst till testservern kan du kontrollera webbplatsen och testa uppgraderingen. För kunder som använder färdiga visningsprogram bör du testa mot vår standardtestserver och s7is1-preview-staging.scene7.com.
 
