Updated by task 'AutomatedMDTask_1631742151450_TM-MT_1631742164987'

--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -4,9 +4,9 @@ description: '"Den senaste versionsinformationen för Adobe Dynamic Media Classi
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
 workflow-type: tm+mt
-source-wordcount: '1376'
+source-wordcount: '1375'
 ht-degree: 0%
 
 ---
@@ -54,7 +54,7 @@ Fullständig dokumentation finns i [https://experienceleague.adobe.com/docs/dyna
 
 ## Visare (Image Serving 5.8.1) {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/home.html).
+Fullständig dokumentation finns i [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
 **Nya funktioner i Image Serving 5.8.1**
 
