--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -5,9 +5,9 @@ title: Versionsinformation om Scene7 Publishing System 6.9 (oktober 2014)
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 5f120925-d387-4bac-8a4d-f67a198b2b8e
-source-git-commit: 191d3e7cc4cd370e1e1b6ca5d7e27acd3ded7b6c
+source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
 workflow-type: tm+mt
-source-wordcount: '1892'
+source-wordcount: '1894'
 ht-degree: 0%
 
 ---
@@ -139,7 +139,7 @@ När du har konfigurerat datorn för att få åtkomst till testservern kan du ko
 
 Nya funktioner och förbättringar
 
-Se även [Referenshandbok för Scene7-visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/home.html).
+Se även [Referenshandbok för Scene7-visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
 * Uppdaterat stöd för Internet Explorer 11
 * Ändrade visningsprogram till att använda Spåra begäranden i stället för Spåra sidor för Adobe Analytics
