--- a/help/s7-release-notes/s7rn68.md
+++ b/help/s7-release-notes/s7rn68.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Scene7 Publishing System 6.8 (maj 2014)
 description: '"Den senaste versionsinformationen som beskriver de senaste funktionerna, förbättringarna och fixarna för Adobe Scene7 Publishing System 6.8, som ingår i Adobe Experience Manager-lösningen i Adobe Marketing Cloud."'
 solution: Experience Manager
-title: Versionsinformation om Scene7 Publishing System 6.8 (maj 2014)
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: f930fbf8-2aa4-4e6e-ad8d-4f0a0c76ff0e
-source-git-commit: c58199c5884c368e92e50fe0ef9d6ad523e36266
+source-git-commit: 06ea55bebbb16de643fec96147ec2b648bb5783b
 workflow-type: tm+mt
-source-wordcount: '1895'
+source-wordcount: '1897'
 ht-degree: 0%
 
 ---
@@ -75,7 +75,7 @@ Följande stöds nu:
 * Anger inledande zoomområde för ZoomView.
 * ZoomView om du vill dölja `IconEffect`-komponenten när zoomning inte är möjlig
 
-Se även [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/home.html).
+Se även [Referenshandbok för visningsprogram](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
 
 <!-- **HTML5 Viewers SDK**
 
